--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -38,7 +38,7 @@ textarea {
 
 .select_file_button {
     width: 150px;
-    height: 100px;
+    height: 90px;
 }
 
 .copy_paste_title {
@@ -49,5 +49,5 @@ textarea {
 
 .parse {
     width: 150px;
-    height: 100px;
+    height: 90px;
 }
